--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "my_portfolio",
-  "homepage": "https://ShaistaTariq.github.io/my_portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,8 +14,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,7 +38,6 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^8.17.1",
-    "gh-pages": "^6.2.0"
+    "ajv": "^8.17.1"
   }
 }
